# fast-mosestokenizer

./: .gitignore  CMakeLists.txt  INSTALL.md  MANIFEST.in  Makefile  README.md  VERSION  build-release-linux.sh  mosestokenizer.pc.in  setup.cfg  setup.py
.github/workflows/: release-github.yaml  release-linux-pypi.yaml  release-osx-pypi.yaml  release-pypi.yaml  release-python.yaml  release.yaml
bench/: .gitignore  Makefile  README.md  bench-all-5.sh  requirements.txt
bench/tools/: line_counter.py  line_counter_w_timeout.py  run_fast_mosestokenizer.py  run_sacremoses.py
bindings/python/mosestokenizer/: __init__.py
cmake/: FindGlib2.cmake  FindRE2.cmake
include/mosestokenizer/: Parameters.h  Tokenizer.h
share/: README.txt
share/nonbreaking_prefixes/: README.txt  nonbreaking_prefix.sk  nonbreaking_prefix.sv  nonbreaking_prefix.te  nonbreaking_prefix.yue  nonbreaking_prefix.zh
src/: Parameters.cpp  Tokenizer.cpp  tokenizer.cpp
src/python/: mosestokenizer.cpp
src/tools/: tokenizer_main.cpp
